@@ -1,0 +1,12 @@
+####################
+#   ES-DOC CIM Questionnaire
+#   Copyright (c) 2017 ES-DOC. All rights reserved.
+#
+#   University of Colorado, Boulder
+#   http://cires.colorado.edu/
+#
+#   This project is distributed according to the terms of the MIT license [http://www.opensource.org/licenses/MIT].
+####################
+
+# ensure that celery_app is loaded when project is loaded...
+from .celery_app import app as celery_app
