@@ -8,17 +8,16 @@
 #   This project is distributed according to the terms of the MIT license [http://www.opensource.org/licenses/MIT].
 ####################
 
-from __future__ import absolute_import, unicode_literals
-
 import os
 from celery import Celery
 from django.conf import settings
 
-# Indicate Celery to use the default Django settings module
+# use Q project settings for Celery...
 os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'settings')
 
-app = Celery('Q')
+# setup celery app for project...
+app = Celery(settings.PROJECT_LABEL)
 app.config_from_object('django.conf:settings', namespace='CELERY')
 
-# This line will tell Celery to autodiscover all your tasks.py that are in your app folders
+# autodiscover all "tasks.py" modules w/in INSTALLED_APPS...
 app.autodiscover_tasks(lambda: settings.INSTALLED_APPS)
